Fix for #19600 - Visibility dropdown not responding in Quick Edit when Stock Management is disabled

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -825,6 +825,11 @@ table.wc_status_table--tools {
 		margin-left: 10px;
 	}
 
+	label.stock_status_field {
+	  clear: both;
+	  float: left;
+	}
+
 	.dimensions div {
 		display: block;
 		margin: 0.2em 0;
